# daft

./: .dep-age-allowlist  .envrc  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  HOMEBREW.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RELEASING.md  SECURITY.md  SETUP_RELEASE.md  SKILL.md  build.rs  bunfig.toml  cliff-prerelease.toml  cliff.toml  cog.toml  cooldown.toml  daft.yml  debug_test.sh  demo.tape  deny.toml  dist-workspace.toml  flake.nix  install.sh  justfile  lefthook.yml  minimal_test.sh  mise.toml  package.json  release-please-config.json  release-plz.toml  (+3 more)
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  rust-architect.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: bench.yml  beta.yml  bump-version.yml  canary.yml  claude-pr-review.yml  docs.yml  labeler.yml  mise-tool-updates.yml  msrv-staleness-check.yml  promote-release.yml  release-cut.yml  release-flow.yml  release-please.yml  release-plz.yml  release.yml  test-homebrew.yml  test.yml
Formula/: daft.rb
benches/: README.md  bench_framework.sh  package_results.sh  run_all.sh
benches/baselines/: test-manual-scale-2026-05-17.md
benches/fixtures/: create_repo.sh  real_repos.sh
benches/scenarios/: branch_delete.sh  checkout.sh  checkout_with_hooks.sh  clone.sh  clone_with_hooks.sh  complete.sh  fetch.sh  init.sh  prune.sh  test_manual_scale.sh  vs_competition.sh  workflow_full.sh
docs/: HISTORY.md  PLAN-hooks-system.md  WEBSITE-BOOTSTRAP.md  WRITING-RECIPES.md  biome.json  bunfig.toml  changelog.md  contributing.md  index.md  package.json
docs/.vitepress/: config.ts
docs/about/: changelog.md  comparison.md  contributing.md  faq.md  glossary.md  index.md  networking-roadmap.md  troubleshooting.md  why-daft.md
docs/benchmarks/: index.md
docs/cli/: daft-activate.md  daft-adopt.md  daft-branch.md  daft-carry.md  daft-clone.md  daft-completions.md  daft-config.md  daft-doctor.md  daft-eject.md  daft-exec.md  daft-fetch.md  daft-file.md  daft-go.md  daft-hooks-jobs.md  daft-hooks.md  daft-init.md  daft-install.md  daft-layout.md  daft-list.md  daft-merge.md  daft-multi-remote.md  daft-prune.md  daft-push.md  daft-release-notes.md  daft-remove.md  daft-rename.md  daft-repo-add.md  daft-repo-info.md  daft-repo-install.md  daft-repo-link.md  daft-repo-list.md  daft-repo-remove.md  daft-repo-unlink.md  daft-run.md  daft-setup.md  daft-shared.md  daft-shell-init.md  daft-shortcuts.md  daft-skill-install.md  daft-skill-show.md  (+35 more)
docs/cookbook/: index.md
docs/getting-started/: installation.md  quick-start.md  shell-integration.md
docs/graph/: concepts.md  coordinated-changes.md  index.md  repo-catalog.md
docs/guide/: adopting-existing-repos.md  claude-skill.md  configuration.md  hooks.md  layouts.md  multi-remote.md  running-commands-across-worktrees.md  shortcuts.md  worktree-workflow.md
docs/hooks/: index.md  job-orchestration.md  lifecycle.md  roadmap.md  trust-and-security.md  yaml-reference.md
docs/plans/: 2026-02-16-branch-delete-design.md  2026-02-16-branch-delete-plan.md  2026-02-16-hook-output-design.md  2026-02-16-hook-output-plan.md  2026-02-18-doctor-fix-improvements-design.md  2026-02-18-doctor-fix-improvements-plan.md  2026-02-18-mise-tasks-restructure-design.md  2026-02-18-mise-tasks-restructure-plan.md  2026-02-18-structural-push-hooks-design.md  2026-02-20-benchmark-dashboard-design.md  2026-02-20-benchmark-dashboard-plan.md  2026-02-20-benchmark-design.md  2026-02-20-benchmark-implementation.md  2026-02-22-os-variant-run-map-design.md  2026-02-22-os-variant-run-map-plan.md  2026-02-23-go-auto-start-design.md  (+8 more)
docs/public/: _redirects  (+1 more)
examples/: timeline_spike.rs
man/: daft-activate.1  daft-adopt.1  daft-carry.1  daft-clone.1  daft-config.1  daft-doctor.1  daft-eject.1  daft-exec.1  daft-fetch.1  daft-file.1  daft-go.1  daft-hooks.1  daft-init.1  daft-install.1  daft-layout.1  daft-list.1  daft-merge.1  daft-multi-remote.1  daft-prune.1  daft-push.1  daft-release-notes.1  daft-remove.1  daft-rename.1  daft-run.1  daft-setup.1  daft-shared.1  daft-shell-init.1  daft-shortcuts.1  daft-start.1  daft-sync.1  daft-update.1  daft.1  git-daft-repo-add.1  git-daft-repo-info.1  git-daft-repo-install.1  git-daft-repo-link.1  git-daft-repo-list.1  git-daft-repo-remove.1  git-daft-repo-unlink.1  git-daft-skill-install.1  (+21 more)
mise-tasks/: build  ci  clippy  daft  deny
scripts/: check-lockfile-age.sh  check-release-build-env.sh  git-worktree-checkout  git-worktree-checkout-branch  git-worktree-checkout-branch-from-default  git-worktree-clone  git-worktree-init  git-worktree-prune
src/: completion_spinner.rs  config.rs  cow_copy.rs  direnv.rs  exec.rs  git.rs  git_oxide.rs  hints.rs  homebrew.rs  interrupt.rs  lib.rs  log_clean.rs  logging.rs  main.rs  prompt.rs  remote.rs  settings.rs  shortcuts.rs  skill.rs  styles.rs  suggest.rs  test_support.rs  trust_prune.rs  update_check.rs  utils.rs
term-styles/: Cargo.toml
term-styles/src/: lib.rs
test-plans/: agent-skill-distribution.md  exec-rail-output.md  forge-pr-checkout.md  go-completions.md  layout-transform-matrix.md  list-live-field-gating.md  plan-execute-timeline.md  progressive-adoption.md  rail-verbose-toggle.md  render-all-columns.md  repo-catalog.md  sync-cancellation.md  sync-resource-governor.md  tasks-daft-run.md  visitor-provenance.md
tests/: README.md  test_all.sh  test_checkout.sh  test_checkout_branch.sh  test_checkout_branch_from_default.sh  test_clone.sh  test_concurrency.rs  test_framework.sh  test_init.sh  test_prune.sh  test_security.rs  test_simple.sh
wix/: main.wxs
xtask/: Cargo.toml
xtask/src/: bench.rs  main.rs  real_state_guard.rs
xtask/src/manual_test/: cow_copy.rs  daft_executor.rs  env.rs  executor.rs  fixture_cache.rs  interactive.rs  mod.rs  repo_gen.rs  runner.rs  sandbox.rs  schema.rs
xtask/src/manual_test/progress/: indicatif_sink.rs  mod.rs
xtask/src/manual_test/reporter/: CLAUDE.md  mod.rs  pretty.rs  quiet.rs  tests.rs
(+1443 files in other folders)
