[package]
name = "daft"
version = "0.1.0"
edition = "2021"
description = "A comprehensive Git extensions toolkit that enhances developer workflows, starting with powerful worktree management"
authors = ["avihu <avihu@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/avihut/daft"
readme = "README.md"
keywords = ["git", "worktree", "workflow", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
dirs = "6.0"
which = "8.0"
tempfile = "3.8"
regex = "1.10"
url = "2.5"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"

[profile.release]
opt-level = "z"      # Optimize for size
lto = "fat"          # Full link-time optimization
codegen-units = 1    # Single codegen unit for better optimization
strip = true         # Strip debug symbols
panic = "abort"      # Abort on panic (smaller binary)