[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "daft"
version = "1.0.27"
edition = "2021"
description = "A comprehensive Git extensions toolkit that enhances developer workflows, starting with powerful worktree management"
authors = ["avihu <avihu@users.noreply.github.com>"]
license = "MIT"
homepage = "https://github.com/avihut/daft"
repository = "https://github.com/avihut/daft"
readme = "README.md"
keywords = ["git", "worktree", "workflow", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.wix]
upgrade-guid = "9249F38F-28C0-4EDA-AA9F-DF597369AB67"
path-guid = "0D7614BC-BA63-41C9-9CA3-F3469DC02EBB"
license = false
eula = false

[package.metadata.deb]
maintainer = "avihu <avihu@users.noreply.github.com>"
copyright = "2024, avihu <avihu@users.noreply.github.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
daft is a Git extensions toolkit that enhances developer workflows \
with powerful worktree management. Run `daft setup` after installing \
to enable shell integration and shortcuts."""
depends = "$auto, git (>= 1:2.5)"
section = "devel"
priority = "optional"
assets = [
    ["target/release/daft", "usr/bin/daft", "755"],
    ["man/*.1", "usr/share/man/man1/", "644"],
]
maintainer-scripts = "packaging/deb/"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/daft", dest = "/usr/bin/daft", mode = "755" },
    { source = "man/*.1", dest = "/usr/share/man/man1/", mode = "644" },
]
auto-req = "no"
post_install_script = """\
for cmd in git-worktree-clone git-worktree-init git-worktree-checkout \
           git-worktree-checkout-branch git-worktree-prune git-worktree-carry \
           git-worktree-fetch git-worktree-flow-adopt git-worktree-flow-eject \
           git-daft; do
    ln -sf daft "/usr/bin/$cmd"
done
"""
pre_uninstall_script = """\
for cmd in git-worktree-clone git-worktree-init git-worktree-checkout \
           git-worktree-checkout-branch git-worktree-prune git-worktree-carry \
           git-worktree-fetch git-worktree-flow-adopt git-worktree-flow-eject \
           git-daft; do
    rm -f "/usr/bin/$cmd"
done
"""

[package.metadata.generate-rpm.requires]
git = ">= 2.5"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
anyhow = "1.0"
dirs = "6.0"
which = "8.0"
tempfile = "3.8"
regex = "1.10"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
termimad = "0.34"
version-migrate = "0.18"
gix = { version = "0.79", default-features = false, features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "status",
    "revparse-regex",
] }
globset = "0.4.18"
indicatif = "0.18"

# pager is Unix-only (uses fork/pipes)
[target.'cfg(unix)'.dependencies]
pager = "0.16"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"

[profile.release]
opt-level = "z"      # Optimize for size
lto = "fat"          # Full link-time optimization
codegen-units = 1    # Single codegen unit for better optimization
strip = true         # Strip debug symbols
panic = "abort"      # Abort on panic (smaller binary)

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
