[package]
name = "term-styles"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Terminal ANSI styling utilities (colors, bold, dim) shared across the daft workspace."
license = "MIT OR Apache-2.0"
publish = false

[package.metadata.release]
# Internal-only workspace crate — cargo-release should never bump or tag it.
release = false
