[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
crossterm = "0.29"
ctrlc = "3.5.2"
daft = { path = "..", version = "1.0.37" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.8"
