[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.3"
crossterm = "0.29"
ctrlc = "3.5.2"
daft = { path = "..", version = "1.13.0" }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[target.'cfg(unix)'.dependencies]
# Used by `xtask test-matrix` to detect parent-process death and self-terminate.
nix = { version = "0.31", features = ["process"] }

[dev-dependencies]
tempfile = "3.8"
