[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.release]
# Internal dev tool — cargo-release should never bump or tag it.
release = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.3"
crossterm = "0.29"
ctrlc = "3.5.2"
daft = { path = "..", version = "1.14.5" }
indicatif = "0.18.4"
rayon = "1.10"
# Reflink + recursive walk for the sandbox's template snapshot / reset.
# Inlined in xtask rather than imported from `daft::cow_copy` because the
# YAML runner port rule in CLAUDE.md forbids `runner.rs / sandbox.rs /
# executor.rs` from naming `daft::`. The duplication is intentional.
reflink-copy = "0.1.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shlex = "2"
term-styles = { workspace = true }
walkdir = "2.5"

[target.'cfg(unix)'.dependencies]
# Used by `xtask test-matrix` to detect parent-process death and self-terminate.
nix = { version = "0.31", features = ["process"] }

[dev-dependencies]
tempfile = "3.8"
